// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`d.createPerson.graphql 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "colNoCreate": "col_no_create",
        "colNoCreateUpdate": "col_no_create_update",
        "colNoCreateUpdateOrderFilter": "col_no_create_update_order_filter",
        "colNoFilter": "create3",
        "colNoOrder": "create1",
        "colNoUpdate": "create2",
        "firstName": null,
        "id": 10,
        "lastName": "Doe",
      },
    },
  },
}
`;

exports[`d.deletePerson.graphql 1`] = `
Object {
  "data": Object {
    "deletePersonById": Object {
      "person": Object {
        "colNoCreate": "col_no_create1",
        "colNoCreateUpdate": "col_no_create_update1",
        "colNoCreateUpdateOrderFilter": "col_no_create_update_order_filter1",
        "colNoFilter": "col_no_filter1",
        "colNoOrder": "col_no_order1",
        "colNoUpdate": "col_no_update1",
        "firstName": "John",
        "id": 1,
        "lastName": "Smith",
      },
    },
  },
}
`;

exports[`d.updatePerson.graphql 1`] = `
Object {
  "data": Object {
    "updatePersonById": Object {
      "person": Object {
        "colNoCreate": "update2",
        "colNoCreateUpdate": "col_no_create_update1",
        "colNoCreateUpdateOrderFilter": "col_no_create_update_order_filter1",
        "colNoFilter": "update3",
        "colNoOrder": "update1",
        "colNoUpdate": "col_no_update1",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
    },
  },
}
`;

exports[`inheritence.createUserFile.graphql 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "user": Object {
        "id": 1,
        "name": "Bobby Tables",
        "nodeId": "WyJ1c2VycyIsMV0=",
      },
    },
    "createUserFile": Object {
      "userFile": Object {
        "filename": "foo.txt",
        "id": 1,
        "userByUserId": Object {
          "id": 1,
          "name": "Bobby Tables",
        },
      },
    },
  },
}
`;

exports[`mutation-create.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "clientMutationId": null,
      "query": Object {
        "nodeId": "query",
      },
      "type": Object {
        "anIntRange": Object {
          "end": Object {
            "inclusive": false,
            "value": 500,
          },
          "start": null,
        },
        "bigint": "467131188225",
        "boolean": false,
        "compoundType": Object {
          "a": 123,
          "b": "abc",
          "c": "GREEN",
          "d": "ec4a9fae-4ec5-4763-98eb-0327fb2dc9bf",
          "e": "FOO_BAR",
          "f": "_EMPTY_",
          "fooBar": 20,
        },
        "date": "2016-10-15",
        "daterange": Object {
          "end": Object {
            "inclusive": false,
            "value": "1927-11-07",
          },
          "start": Object {
            "inclusive": true,
            "value": "1927-11-06",
          },
        },
        "decimal": "15.2",
        "domain": 6,
        "domain2": 5,
        "enum": "RED",
        "enumArray": Array [
          "RED",
          "GREEN",
        ],
        "id": 201,
        "interval": Object {
          "days": 4,
          "hours": 3,
          "minutes": 2,
          "months": 5,
          "seconds": 1,
          "years": 6,
        },
        "intervalArray": Array [
          Object {
            "days": 5,
            "hours": 4,
            "minutes": 3,
            "months": 6,
            "seconds": 2,
            "years": 7,
          },
          Object {
            "days": 6,
            "hours": 5,
            "minutes": 4,
            "months": 7,
            "seconds": 3,
            "years": 8,
          },
        ],
        "json": "{\\"x\\":1,\\"y\\":2,\\"z\\":3}",
        "jsonb": "{\\"a\\":1,\\"b\\":2,\\"c\\":3}",
        "money": 1234567.89,
        "nestedCompoundType": Object {
          "a": Object {
            "a": 456,
            "b": "def",
            "c": "BLUE",
            "d": "79863dcf-0433-4c3d-bc51-978326d4546f",
            "e": "BAR_FOO",
            "f": "ONE",
            "fooBar": 42,
          },
          "b": Object {
            "a": 789,
            "b": "ghi",
            "c": "RED",
            "d": "b687ee42-c515-4544-b742-525e39517e7d",
            "e": "BAZ_QUX",
            "f": "_EMPTY_",
            "fooBar": -8,
          },
          "bazBuz": 0,
        },
        "nodeId": "WyJ0eXBlcyIsMjAxXQ==",
        "nullablePoint": null,
        "numeric": "15.2",
        "numrange": Object {
          "end": null,
          "start": Object {
            "inclusive": true,
            "value": "50",
          },
        },
        "point": Object {
          "x": 1,
          "y": 3,
        },
        "smallint": 30,
        "textArray": Array [
          "have",
          "you",
          "ever",
          "been",
          "down",
          "the",
          "water",
          "spout",
          "?",
        ],
        "time": "19:13:18.625699",
        "timestamp": "2016-10-07T16:12:21.747269",
        "timestamptz": "2016-10-09T16:12:45.218676-04:00",
        "timetz": "13:13:29.585176-04",
        "varchar": "abc",
      },
    },
    "b": Object {
      "a": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs5MDAwXV0=",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "b": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9kZXNjIixbOTAwMF1d",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "c": Object {
        "cursor": "WyJpZF9hc2MiLFs5MDAwXV0=",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "clientMutationId": null,
      "d": Object {
        "cursor": "WyJpZF9kZXNjIixbOTAwMF1d",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "e": Object {
        "cursor": "WyJlbWFpbF9hc2MiLFsiam9obm55LmJveS5zbWl0aEBlbWFpbC5jb20iXV0=",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "f": Object {
        "cursor": "WyJlbWFpbF9kZXNjIixbImpvaG5ueS5ib3kuc21pdGhAZW1haWwuY29tIl1d",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "g": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs5MDAwXV0=",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "h": Object {
        "cursor": "WyJlbWFpbF9kZXNjIiwiaWRfZGVzYyIsWyJqb2hubnkuYm95LnNtaXRoQGVtYWlsLmNvbSIsOTAwMF1d",
        "node": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
      },
      "person": Object {
        "about": "Son of Sara and John Smith.",
        "config": Object {
          "_\\"\\\\_$@£$)(@*£$": "_\\"\\\\_$@£$)(@*£$",
          "a": "5",
          "actually_null": null,
          "b": "6",
          "null_string": "null",
        },
        "email": "johnny.boy.smith@email.com",
        "id": 9000,
        "issue27UserExists": false,
        "lastLoginFromIp": "172.16.1.2",
        "name": "John Smith Jr.",
        "nodeId": "WyJwZW9wbGUiLDkwMDBd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "c": Object {
      "a": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyMF1d",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "b": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9kZXNjIixbMjBdXQ==",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "c": Object {
        "cursor": "WyJpZF9hc2MiLFsyMF1d",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "clientMutationId": "hello",
      "d": Object {
        "cursor": "WyJpZF9kZXNjIixbMjBdXQ==",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "e": Object {
        "cursor": "WyJlbWFpbF9hc2MiLFsiYmVzdC5wYWxAZW1haWwuY29tIl1d",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "f": Object {
        "cursor": "WyJlbWFpbF9kZXNjIixbImJlc3QucGFsQGVtYWlsLmNvbSJdXQ==",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "g": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyMF1d",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "h": Object {
        "cursor": "WyJlbWFpbF9kZXNjIiwiaWRfZGVzYyIsWyJiZXN0LnBhbEBlbWFpbC5jb20iLDIwXV0=",
        "node": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
      },
      "person": Object {
        "about": "My archnemisis is Budd Deey.",
        "config": null,
        "email": "best.pal@email.com",
        "id": 20,
        "issue27UserExists": false,
        "lastLoginFromIp": "192.168.0.42",
        "name": "Best Pal",
        "nodeId": "WyJwZW9wbGUiLDIwXQ==",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "d": Object {
      "clientMutationId": "world",
      "compoundKey": Object {
        "extra": false,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiw5MDAwLDIwXQ==",
        "personByPersonId1": Object {
          "name": "John Smith Jr.",
          "nodeId": "WyJwZW9wbGUiLDkwMDBd",
        },
        "personByPersonId2": Object {
          "name": "Best Pal",
          "nodeId": "WyJwZW9wbGUiLDIwXQ==",
        },
        "personId1": 9000,
        "personId2": 20,
      },
      "personByPersonId1": Object {
        "name": "John Smith Jr.",
        "nodeId": "WyJwZW9wbGUiLDkwMDBd",
      },
      "personByPersonId2": Object {
        "name": "Best Pal",
        "nodeId": "WyJwZW9wbGUiLDIwXQ==",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "e": Object {
      "edgeCase": Object {
        "notNullHasDefault": true,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "f": Object {
      "edgeCase": Object {
        "notNullHasDefault": false,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "g": Object {
      "a": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxOTk4XV0=",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "b": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9kZXNjIixbMTk5OF1d",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "c": Object {
        "cursor": "WyJpZF9hc2MiLFsxOTk4XV0=",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "clientMutationId": null,
      "d": Object {
        "cursor": "WyJpZF9kZXNjIixbMTk5OF1d",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "e": Object {
        "cursor": "WyJlbWFpbF9hc2MiLFsiYnVkZC5kZWV5LnRoZS5zZWNvbmRAZW1haWwuY29tIl1d",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "f": Object {
        "cursor": "WyJlbWFpbF9kZXNjIixbImJ1ZGQuZGVleS50aGUuc2Vjb25kQGVtYWlsLmNvbSJdXQ==",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "g": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxOTk4XV0=",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "h": Object {
        "cursor": "WyJlbWFpbF9kZXNjIiwiaWRfZGVzYyIsWyJidWRkLmRlZXkudGhlLnNlY29uZEBlbWFpbC5jb20iLDE5OThdXQ==",
        "node": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDE5OThd",
        },
      },
      "person": Object {
        "about": null,
        "config": Object {
          "a": "5",
          "actually_null": null,
          "b": "6",
          "null_string": "null",
        },
        "email": "budd.deey.the.second@email.com",
        "id": 1998,
        "issue27UserExists": false,
        "lastLoginFromIp": "10.0.1.42",
        "name": "Budd Deey",
        "nodeId": "WyJwZW9wbGUiLDE5OThd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "h": Object {
      "person": Object {
        "issue27UserExists": true,
      },
    },
    "i": Object {
      "defaultValue": Object {
        "id": 2000,
        "nullValue": null,
      },
    },
    "j": Object {
      "post": Object {
        "comptypes": Array [
          Object {
            "isOptimised": true,
            "schedule": "2009-10-24T04:23:54-04:00",
          },
          Object {
            "isOptimised": false,
            "schedule": "2008-10-24T04:23:54-04:00",
          },
          Object {
            "isOptimised": null,
            "schedule": "2007-10-24T04:23:54-04:00",
          },
        ],
        "headline": "super headline",
        "id": 12,
      },
    },
    "k": Object {
      "p2": Object {
        "personByAuthorId": Object {
          "email": "john.smith@email.com",
        },
      },
      "personByAuthorId": Object {
        "createdAt": null,
      },
      "post": Object {
        "comptypes": Array [
          Object {
            "isOptimised": true,
            "schedule": "2008-10-24T04:17:54-04:00",
          },
          Object {
            "isOptimised": false,
            "schedule": "2007-10-24T04:17:54-04:00",
          },
          Object {
            "isOptimised": null,
            "schedule": "2006-10-24T04:17:54-04:00",
          },
        ],
        "headline": "super headline 2",
        "id": 13,
        "personByAuthorId": Object {
          "id": 1,
        },
      },
      "postEdge": Object {
        "node": Object {
          "comptypes": Array [
            Object {
              "isOptimised": true,
              "schedule": "2008-10-24T04:17:54-04:00",
            },
            Object {
              "isOptimised": false,
              "schedule": "2007-10-24T04:17:54-04:00",
            },
            Object {
              "isOptimised": null,
              "schedule": "2006-10-24T04:17:54-04:00",
            },
          ],
          "headline": "super headline 2",
          "id": 13,
          "personByAuthorId": Object {
            "name": "John Smith",
          },
        },
      },
    },
  },
}
`;

exports[`mutation-delete.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "clientMutationId": null,
      "deletedPostId": "WyJwb3N0cyIsMV0=",
      "post": Object {
        "authorId": 2,
        "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
        "id": 1,
        "nodeId": "WyJwb3N0cyIsMV0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "b": Object {
      "clientMutationId": "hello",
      "deletedPostId": "WyJwb3N0cyIsMl0=",
      "post": Object {
        "authorId": 1,
        "headline": "I hate yogurt. It’s just stuff with bits in.",
        "id": 2,
        "nodeId": "WyJwb3N0cyIsMl0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "c": null,
    "d": Object {
      "clientMutationId": "world",
      "deletedPostId": "WyJwb3N0cyIsM10=",
      "post": Object {
        "authorId": 1,
        "headline": "Is that a cooking show?",
        "id": 3,
        "nodeId": "WyJwb3N0cyIsM10=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "d2": null,
    "e": Object {
      "clientMutationId": null,
      "deletedPostId": "WyJwb3N0cyIsNl0=",
      "post": Object {
        "authorId": 3,
        "headline": "Stop talking, brain thinking. Hush.",
        "id": 6,
        "nodeId": "WyJwb3N0cyIsNl0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "f": Object {
      "clientMutationId": "hello",
      "deletedPostId": "WyJwb3N0cyIsOV0=",
      "post": Object {
        "authorId": 3,
        "headline": "You know how I sometimes have really brilliant ideas?",
        "id": 9,
        "nodeId": "WyJwb3N0cyIsOV0=",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "g": null,
    "h": Object {
      "clientMutationId": "world",
      "deletedPostId": "WyJwb3N0cyIsMTFd",
      "post": Object {
        "authorId": 3,
        "headline": "They’re not aliens, they’re Earth…liens!",
        "id": 11,
        "nodeId": "WyJwb3N0cyIsMTFd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "i": Object {
      "clientMutationId": null,
      "compoundKey": Object {
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
        "personByPersonId1": Object {
          "name": "Kathryn Ramirez",
          "nodeId": "WyJwZW9wbGUiLDRd",
        },
        "personByPersonId2": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
        "personId1": 4,
        "personId2": 3,
      },
      "deletedCompoundKeyId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
      "query": Object {
        "nodeId": "query",
      },
    },
    "j": Object {
      "clientMutationId": null,
      "compoundKey": Object {
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
        "personByPersonId1": Object {
          "name": "Sara Smith",
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
        "personByPersonId2": Object {
          "name": "Budd Deey",
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
        "personId1": 2,
        "personId2": 3,
      },
      "deletedCompoundKeyId": "WyJjb21wb3VuZF9rZXlzIiwyLDNd",
      "query": Object {
        "nodeId": "query",
      },
    },
    "k": Object {
      "clientMutationId": null,
      "deletedPersonId": "WyJwZW9wbGUiLDNd",
      "query": Object {
        "nodeId": "query",
      },
    },
    "l": Object {
      "clientMutationId": null,
      "deletedPersonId": "WyJwZW9wbGUiLDZd",
      "person": Object {
        "email": "graphile-build.issue.27.exists@example.com",
        "id": 6,
        "issue27UserExists": false,
        "name": "Twenty Seventwo",
        "nodeId": "WyJwZW9wbGUiLDZd",
      },
      "query": Object {
        "nodeId": "query",
      },
    },
  },
  "errors": Array [
    [GraphQLError: No values were deleted in collection 'posts' because no values you can delete were found matching these criteria.],
    [GraphQLError: Nope.],
    [GraphQLError: No values were deleted in collection 'posts' because no values you can delete were found matching these criteria.],
  ],
}
`;

exports[`mutation-delete-error.graphql 1`] = `
Object {
  "data": Object {
    "deleteTypeById": null,
  },
  "errors": Array [
    [GraphQLError: Nope.],
  ],
}
`;

exports[`mutation-return-types.graphql 1`] = `
Object {
  "data": Object {
    "mutationInInout": Object {
      "ino": 15,
    },
    "mutationInOut": Object {
      "o": 52,
    },
    "mutationOut": Object {
      "o": 42,
    },
    "mutationOutComplex": Object {
      "result": Object {
        "x": 2,
        "y": Object {
          "a": 1,
          "b": "2",
          "c": "BLUE",
        },
        "z": Object {
          "id": 1,
          "name": "John Smith",
          "nodeId": "WyJwZW9wbGUiLDFd",
          "postsByAuthorId": Object {
            "nodes": Array [
              Object {
                "id": 2,
                "nodeId": "WyJwb3N0cyIsMl0=",
              },
              Object {
                "id": 3,
                "nodeId": "WyJwb3N0cyIsM10=",
              },
              Object {
                "id": 4,
                "nodeId": "WyJwb3N0cyIsNF0=",
              },
              Object {
                "id": 7,
                "nodeId": "WyJwb3N0cyIsN10=",
              },
            ],
          },
        },
      },
    },
    "mutationOutComplexSetof": Object {
      "results": Array [
        Object {
          "x": 2,
          "y": Object {
            "a": 1,
            "b": "2",
            "c": "BLUE",
          },
          "z": Object {
            "id": 1,
            "name": "John Smith",
            "nodeId": "WyJwZW9wbGUiLDFd",
            "postsByAuthorId": Object {
              "nodes": Array [
                Object {
                  "id": 2,
                  "nodeId": "WyJwb3N0cyIsMl0=",
                },
                Object {
                  "id": 3,
                  "nodeId": "WyJwb3N0cyIsM10=",
                },
                Object {
                  "id": 4,
                  "nodeId": "WyJwb3N0cyIsNF0=",
                },
                Object {
                  "id": 7,
                  "nodeId": "WyJwb3N0cyIsN10=",
                },
              ],
            },
          },
        },
      ],
    },
    "mutationOutOut": Object {
      "result": Object {
        "firstOut": 42,
        "secondOut": "out",
      },
    },
    "mutationOutOutCompoundType": Object {
      "result": Object {
        "o1": 20,
        "o2": Object {
          "a": 1,
          "b": "2",
          "c": "BLUE",
        },
      },
    },
    "mutationOutOutSetof": Object {
      "results": Array [
        Object {
          "o1": 42,
          "o2": "out",
        },
        Object {
          "o1": 43,
          "o2": "out2",
        },
      ],
    },
    "mutationOutOutUnnamed": Object {
      "result": Object {
        "arg1": 42,
        "arg2": "out",
      },
    },
    "mutationOutSetof": Object {
      "os": Array [
        42,
        43,
      ],
    },
    "mutationOutTable": Object {
      "person": Object {
        "id": 1,
        "nodeId": "WyJwZW9wbGUiLDFd",
      },
    },
    "mutationOutTableSetof": Object {
      "people": Array [
        Object {
          "id": 1,
          "nodeId": "WyJwZW9wbGUiLDFd",
        },
        Object {
          "id": 2,
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
        Object {
          "id": 3,
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
        Object {
          "id": 4,
          "nodeId": "WyJwZW9wbGUiLDRd",
        },
        Object {
          "id": 5,
          "nodeId": "WyJwZW9wbGUiLDVd",
        },
        Object {
          "id": 6,
          "nodeId": "WyJwZW9wbGUiLDZd",
        },
      ],
    },
    "mutationOutUnnamed": Object {
      "integer": 42,
    },
    "mutationOutUnnamedOutOutUnnamed": Object {
      "result": Object {
        "arg1": 42,
        "arg3": 3,
        "o2": "out2",
      },
    },
    "mutationReturnsTableMultiCol": Object {
      "results": Array [
        Object {
          "col1": 62,
          "col2": "out",
        },
        Object {
          "col1": 63,
          "col2": "out2",
        },
      ],
    },
    "mutationReturnsTableOneCol": Object {
      "col1S": Array [
        62,
        63,
      ],
    },
  },
}
`;

exports[`mutation-update.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "clientMutationId": null,
      "person": Object {
        "about": "An older John Smith",
        "email": "john.smith@email.com",
        "id": 1,
        "issue27UserExists": true,
        "name": "John Smith Sr.",
        "nodeId": "WyJwZW9wbGUiLDFd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
        "node": Object {
          "id": 1,
          "nodeId": "WyJwZW9wbGUiLDFd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "b": Object {
      "clientMutationId": "hello",
      "person": Object {
        "about": null,
        "email": "sarah.smith@email.com",
        "id": 2,
        "issue27UserExists": true,
        "name": "Sarah Smith",
        "nodeId": "WyJwZW9wbGUiLDJd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "node": Object {
          "id": 2,
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "c": Object {
      "clientMutationId": "world",
      "person": Object {
        "about": "Now with an “H.”",
        "email": "sarah.smith@email.com",
        "id": 2,
        "issue27UserExists": true,
        "name": "Sarah Smith",
        "nodeId": "WyJwZW9wbGUiLDJd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "node": Object {
          "id": 2,
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "d": Object {
      "clientMutationId": null,
      "person": Object {
        "about": "I have taken over Budd’s account. Hehehe.",
        "email": "budd.deey@email.com",
        "id": 3,
        "issue27UserExists": true,
        "name": "Best Pal",
        "nodeId": "WyJwZW9wbGUiLDNd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
        "node": Object {
          "id": 3,
          "nodeId": "WyJwZW9wbGUiLDNd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "e": Object {
      "clientMutationId": null,
      "person": Object {
        "about": "Make art not friends.",
        "email": "kathryn.ramirez@email.com",
        "id": 4,
        "issue27UserExists": true,
        "name": "Kathryn Ramirez",
        "nodeId": "WyJwZW9wbGUiLDRd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
        "node": Object {
          "id": 4,
          "nodeId": "WyJwZW9wbGUiLDRd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "f": Object {
      "clientMutationId": null,
      "compoundKey": Object {
        "extra": true,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiwyLDJd",
        "personByPersonId1": Object {
          "id": 2,
          "name": "Sarah Smith",
        },
        "personByPersonId2": Object {
          "id": 2,
          "name": "Sarah Smith",
        },
        "personId1": 2,
        "personId2": 2,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "g": Object {
      "clientMutationId": "hello",
      "compoundKey": Object {
        "extra": false,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiwzLDJd",
        "personByPersonId1": Object {
          "id": 3,
          "name": "Best Pal",
        },
        "personByPersonId2": Object {
          "id": 2,
          "name": "Sarah Smith",
        },
        "personId1": 3,
        "personId2": 2,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "h": Object {
      "clientMutationId": "world",
      "compoundKey": Object {
        "extra": false,
        "nodeId": "WyJjb21wb3VuZF9rZXlzIiw0LDNd",
        "personByPersonId1": Object {
          "id": 4,
          "name": "Kathryn Ramirez",
        },
        "personByPersonId2": Object {
          "id": 3,
          "name": "Best Pal",
        },
        "personId1": 4,
        "personId2": 3,
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "i": Object {
      "clientMutationId": null,
      "person": Object {
        "about": null,
        "email": "sarah.smith@email.com",
        "id": 2,
        "issue27UserExists": true,
        "name": "Sarah Smith",
        "nodeId": "WyJwZW9wbGUiLDJd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "node": Object {
          "id": 2,
          "nodeId": "WyJwZW9wbGUiLDJd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "j": Object {
      "clientMutationId": null,
      "person": Object {
        "about": null,
        "email": "somethingelse@example.com",
        "id": 6,
        "issue27UserExists": false,
        "name": "Twenty Seventwo",
        "nodeId": "WyJwZW9wbGUiLDZd",
      },
      "personEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
        "node": Object {
          "id": 6,
          "nodeId": "WyJwZW9wbGUiLDZd",
        },
      },
      "query": Object {
        "nodeId": "query",
      },
    },
    "k": Object {
      "defaultValue": Object {
        "id": 1,
        "nullValue": null,
      },
    },
    "l": Object {
      "noPrimaryKey": Object {
        "id": 1,
        "str": "New String",
      },
    },
  },
}
`;

exports[`pg10.identity.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "alwaysAsIdentity": Object {
        "id": 1,
        "t": "test",
      },
    },
    "b": Object {
      "byDefaultAsIdentity": Object {
        "id": 1,
        "t": "test",
      },
    },
    "c": Object {
      "byDefaultAsIdentity": Object {
        "id": 100,
        "t": "test",
      },
    },
  },
}
`;

exports[`procedure-mutation.graphql 1`] = `
Object {
  "data": Object {
    "add1Mutation": Object {
      "clientMutationId": null,
      "integer": 3,
    },
    "add2Mutation": Object {
      "clientMutationId": "hello",
      "integer": 4,
    },
    "add3Mutation": Object {
      "clientMutationId": "world",
      "integer": null,
    },
    "add4Mutation": Object {
      "integer": 4,
    },
    "add4MutationError": null,
    "compoundTypeArrayMutation": Object {
      "compoundTypes": Array [
        Object {
          "a": 419,
          "b": "easy cheesy baked potatoes",
          "c": "RED",
          "d": null,
          "e": "FOO_BAR",
          "f": "_EMPTY_",
          "fooBar": 8,
          "g": Object {
            "hours": 5,
            "minutes": null,
            "seconds": null,
          },
        },
        null,
        Object {
          "a": 420,
          "b": "easy cheesy baked potatoes",
          "c": "RED",
          "d": null,
          "e": "FOO_BAR",
          "f": "_EMPTY_",
          "fooBar": 8,
          "g": Object {
            "hours": 5,
            "minutes": null,
            "seconds": null,
          },
        },
      ],
    },
    "compoundTypeMutation": Object {
      "compoundType": Object {
        "a": 420,
        "b": "easy cheesy baked potatoes",
        "c": "RED",
        "d": null,
        "e": "FOO_BAR",
        "f": "_EMPTY_",
        "fooBar": 8,
        "g": Object {
          "hours": 5,
          "minutes": null,
          "seconds": null,
        },
      },
    },
    "compoundTypeSetMutation": Object {
      "compoundTypes": Array [
        Object {
          "a": 419,
          "b": "easy cheesy baked potatoes",
          "c": "RED",
          "d": null,
          "e": "FOO_BAR",
          "f": "_EMPTY_",
          "fooBar": 8,
          "g": Object {
            "hours": 5,
            "minutes": null,
            "seconds": null,
          },
        },
        Object {
          "a": 420,
          "b": "easy cheesy baked potatoes",
          "c": "RED",
          "d": null,
          "e": "FOO_BAR",
          "f": "_EMPTY_",
          "fooBar": 8,
          "g": Object {
            "hours": 5,
            "minutes": null,
            "seconds": null,
          },
        },
      ],
    },
    "guidFn": Object {
      "guid": null,
    },
    "guidFn2": Object {
      "guid": "0123456789abcde",
    },
    "intSetMutation": Object {
      "integers": Array [
        1,
        2,
        3,
        4,
        5,
        null,
        6,
      ],
    },
    "issue756Mutation": Object {
      "issue756": null,
    },
    "issue756SetMutation": Object {
      "issue756S": Array [
        Object {
          "id": 1,
          "ts": "1999-06-10T20:00:00-04:00",
        },
        null,
        Object {
          "id": 2,
          "ts": "1999-06-10T20:00:00-04:00",
        },
      ],
    },
    "jsonIdentityMutation": Object {
      "json": "{\\"a\\":1,\\"b\\":2,\\"c\\":3}",
    },
    "jsonIdentityMutationIssue85": Object {
      "json": "[{\\"amount\\":\\"44\\"},{\\"amount\\":null}]",
    },
    "jsonbIdentityMutation": Object {
      "json": "{\\"a\\":1,\\"b\\":2,\\"c\\":3}",
    },
    "jsonbIdentityMutationIssue85": Object {
      "json": "[{\\"amount\\":\\"44\\"},{\\"amount\\":null}]",
    },
    "jsonbIdentityMutationPlpgsqlIssue85": Object {
      "json": "[{\\"amount\\":\\"44\\"},{\\"amount\\":null}]",
    },
    "jsonbIdentityMutationPlpgsqlOverridingDefaultIssue85": Object {
      "json": "[{\\"amount\\":\\"44\\"},{\\"amount\\":null}]",
    },
    "jsonbIdentityMutationPlpgsqlWithDefaultIssue85": Object {
      "json": "[]",
    },
    "mult1": Object {
      "integer": 0,
    },
    "mult2": Object {
      "integer": 1,
    },
    "mult3": Object {
      "integer": 2,
    },
    "mult4": Object {
      "integer": 10,
    },
    "mutationCompoundTypeArray": Object {
      "compoundTypes": Array [
        Object {
          "a": 419,
          "b": "easy cheesy baked potatoes",
          "c": "RED",
          "d": null,
          "e": "BAR_FOO",
          "f": "_EMPTY_",
          "fooBar": 8,
          "g": Object {
            "hours": 5,
            "minutes": null,
            "seconds": null,
          },
        },
        null,
        Object {
          "a": 420,
          "b": "easy cheesy baked potatoes",
          "c": "RED",
          "d": null,
          "e": "BAR_FOO",
          "f": "_EMPTY_",
          "fooBar": 8,
          "g": Object {
            "hours": 5,
            "minutes": null,
            "seconds": null,
          },
        },
      ],
    },
    "mutationIntervalArray": Object {
      "intervals": Array [
        Object {
          "days": null,
          "hours": null,
          "minutes": null,
          "months": null,
          "seconds": 12,
          "years": null,
        },
        Object {
          "days": null,
          "hours": 3,
          "minutes": null,
          "months": null,
          "seconds": null,
          "years": null,
        },
        Object {
          "days": null,
          "hours": 9,
          "minutes": 36,
          "months": null,
          "seconds": 7,
          "years": null,
        },
      ],
    },
    "mutationIntervalSet": Object {
      "intervals": Array [
        Object {
          "days": null,
          "hours": null,
          "minutes": null,
          "months": null,
          "seconds": 12,
          "years": null,
        },
        Object {
          "days": null,
          "hours": 3,
          "minutes": null,
          "months": null,
          "seconds": null,
          "years": null,
        },
        Object {
          "days": null,
          "hours": 9,
          "minutes": 36,
          "months": null,
          "seconds": 7,
          "years": null,
        },
      ],
    },
    "mutationTextArray": Object {
      "strings": Array [
        "str1",
        "str2",
        "str3",
      ],
    },
    "noArgsMutation": Object {
      "clientMutationId": "x",
      "integer": 2,
    },
    "postMany": Object {
      "posts": Array [
        Object {
          "comptypes": Array [
            Object {
              "isOptimised": true,
              "schedule": "2009-10-24T04:23:54-04:00",
            },
          ],
          "headline": "headline",
          "id": 7,
        },
        Object {
          "comptypes": Array [
            Object {
              "isOptimised": null,
              "schedule": "2009-10-24T04:23:54-04:00",
            },
          ],
          "headline": "headline",
          "id": 8,
        },
        Object {
          "comptypes": Array [
            Object {
              "isOptimised": false,
              "schedule": "2009-10-24T04:23:54-04:00",
            },
          ],
          "headline": "headline",
          "id": 9,
        },
      ],
    },
    "postWithSuffix": Object {
      "post": Object {
        "headline": "headline_test",
        "id": 15,
      },
    },
    "returnVoidMutation": Object {
      "__typename": "ReturnVoidMutationPayload",
    },
    "tableMutation": Object {
      "personByAuthorId": Object {
        "id": 5,
        "name": "Joe Tucker",
      },
      "post": Object {
        "authorId": 5,
        "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
        "id": 5,
        "nodeId": "WyJwb3N0cyIsNV0=",
      },
      "postEdge": Object {
        "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "node": Object {
          "headline": "Please, Don-Bot… look into your hard drive, and open your mercy file!",
          "id": 5,
        },
      },
    },
    "tableMutationReturningNull": Object {
      "personByAuthorId": null,
      "post": null,
      "postEdge": null,
    },
    "tableSetMutation": Object {
      "people": Array [
        Object {
          "name": "John Smith",
        },
        Object {
          "name": "Sara Smith",
        },
        Object {
          "name": "Budd Deey",
        },
        Object {
          "name": "Kathryn Ramirez",
        },
        Object {
          "name": "Joe Tucker",
        },
        Object {
          "name": "Twenty Seventwo",
        },
      ],
    },
    "typesMutation": Object {
      "boolean": false,
    },
  },
  "errors": Array [
    [GraphQLError: Deliberate error],
  ],
}
`;

exports[`rbac.createLeftArm.graphql 1`] = `
Object {
  "data": Object {
    "createLeftArm": Object {
      "leftArm": Object {
        "id": 100,
        "lengthInMetres": 0.66,
        "mood": "neutral",
        "nodeId": "WyJsZWZ0X2FybXMiLDEwMF0=",
        "personId": 3,
      },
    },
  },
}
`;

exports[`rbac.createPerson.graphql 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "about": "Unknown",
        "aliases": Array [
          "Jay Doe",
          "JD",
        ],
        "email": "jane.doe@example.com",
        "id": 10,
        "name": "Jane Doe",
        "site": Object {
          "url": "http://example.com",
        },
      },
    },
  },
}
`;

exports[`rbac.deletePerson.graphql 1`] = `
Object {
  "data": Object {
    "deletePersonById": Object {
      "deletedPersonId": "WyJwZW9wbGUiLDNd",
    },
  },
}
`;

exports[`rbac.leftArmIdentity.graphql 1`] = `
Object {
  "data": Object {
    "leftArmIdentity": Object {
      "leftArm": Object {
        "id": 9001,
        "lengthInMetres": 77,
        "mood": "jubilant",
        "nodeId": "WyJsZWZ0X2FybXMiLDkwMDFd",
        "personId": 99,
      },
    },
  },
}
`;

exports[`rbac.updateLeftArm.graphql 1`] = `
Object {
  "data": Object {
    "updateLeftArmById": Object {
      "leftArm": Object {
        "id": 47,
        "lengthInMetres": 0.65,
        "mood": "jovial",
        "nodeId": "WyJsZWZ0X2FybXMiLDQ3XQ==",
        "personId": 5,
      },
    },
  },
}
`;

exports[`rbac.updatePerson.graphql 1`] = `
Object {
  "data": Object {
    "updatePersonById": Object {
      "person": Object {
        "about": null,
        "aliases": Array [
          "BD",
          "Buddy",
        ],
        "email": "buddy@example.com",
        "id": 3,
        "name": "Budd Daay",
        "site": Object {
          "url": "http://buddy.com",
        },
      },
    },
  },
}
`;
